--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-github-calendar": "^4.3.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
