--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_GITHUB_USERNAME='shivi028'
-# NEXT_PUBLIC_GITHUB_JOIN_YEAR=
+GMAIL_USER=tiwarishivi028@gmail.com
+GMAIL_PASS=your-email-password
