--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_GITHUB_USERNAME='shivi028'
 GMAIL_USER=tiwarishivi028@gmail.com
-GMAIL_PASS=ComputerPass00
+GMAIL_PASS=mylx iaje sfel haew
